progress and meter display wrong width, don't match html value parameter
Categories
(Core :: Widget, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox88 | --- | fixed |
People
(Reporter: aja, Assigned: emilio)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0
Steps to reproduce:
data:text/html,<progress max=1 value=.5></progress>
data:text/html,<meter high=.66 low=.33 max=1 min=0 optimum=.5 value=.25></meter>
data:text/html,<meter high=.66 low=.33 max=1 min=0 optimum=.5 value=.5></meter>
data:text/html,<meter high=.66 low=.33 max=1 min=0 optimum=.5 value=.75></meter>
Actual results:
Indicators are wrong width...too narrow
Expected results:
Indicators should match up with html value parameter.
Problem not found on beta/dev 87, broken on trunk.
Reporter | ||
Comment 1•4 years ago
|
||
This appears to be specific to Non-Native Theme...at least on win.
Sorry, but having issues getting moz-regression to run :(
Reporter | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
The progress chunk already has the right size, but it's easier to get
the right clipping if we just paint it as part of the progress bar.
This is much like we paint the range track and thumb. We apply the
native appearance atomically so this should be fine.
Reporter | ||
Comment 3•4 years ago
|
||
Finally got mozregression running, pointed to Bug 1689252, as you probably already figured out.
Reporter | ||
Comment 4•4 years ago
|
||
Figured it must be something like that, since low/optimum/high colors looked right, which made me assume DOM values must be okay.
Assignee | ||
Comment 5•4 years ago
|
||
I wonder if we could do something more fancy with the animation than
QueueAnimatedContentForRefresh, which is timer based, like a
transform-like animation that WebRender could run or something, but this
is probably good enough for now.
Depends on D108335
Reporter | ||
Comment 6•4 years ago
|
||
Not for this bug but, FWIW, IMHO, don't think you'd hear much screaming about non-animating progress. Nor if meter chunk was flat, rather than linear-gradient.
Updated•4 years ago
|
Comment 9•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/71549d995fb4
https://hg.mozilla.org/mozilla-central/rev/0b34c40347da
Description
•